[fix] - toList version error solved